Closed Bug 780625 Opened 13 years ago Closed 13 years ago

Followup fix for "Don't install quota handlers on chrome databases"

Categories

(Core :: Storage: IndexedDB, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: janv, Assigned: janv)

References

Details

Attachments

(1 file)

No description provided.
OS: Mac OS X → All
Hardware: x86 → All
Summary: Folloe → Followup fix for "Don't install quota handlers on chrome databases"
Attached patch patchSplinter Review
Assignee: nobody → Jan.Varga
Status: NEW → ASSIGNED
Attachment #649293 - Flags: review?(bent.mozilla)
We can avoid calling UpdateQuotaInformationForFile() for stored files too
Blocks: 754142
Attachment #649293 - Flags: review?(bent.mozilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: