Bug 780625 - Followup fix for "Don't install quota handlers on chrome databases". r=bent