dom/indexedDB/FileManager.cpp
@@ -41,7 +41,8 @@ EnumerateToTArray(const PRUint64& aKey,
 
 nsresult
 FileManager::Init(nsIFile* aDirectory,
-                  mozIStorageConnection* aConnection)
+                  mozIStorageConnection* aConnection,
+                  FactoryPrivilege aPrivilege)
 {
   NS_ASSERTION(!NS_IsMainThread(), "Wrong thread!");
 
@@ -103,8 +104,10 @@ FileManager::Init(nsIFile* aDirectory,
     NS_ENSURE_SUCCESS(rv, rv);
 
     if (flag) {
-      rv = ss->UpdateQuotaInformationForFile(file);
-      NS_ENSURE_SUCCESS(rv, rv);
+      if (aPrivilege != Chrome) {
+        rv = ss->UpdateQuotaInformationForFile(file);
+        NS_ENSURE_SUCCESS(rv, rv);
+      }
     }
     else {
       rv = file->Remove(false);
